add config jenkinsfile_backend

--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -7,6 +7,10 @@ pipeline {
       serviceAccount 'jenkins-deployer'
     }
   }
+  options {
+      skipDefaultCheckout(true)
+    }
+
 
   environment {
     DOCKERHUB_USERNAME = 'inestmimi123'
@@ -18,6 +22,20 @@ pipeline {
   }
 
   stages {
+  stage('Checkout') {
+    steps {
+      container('node') {
+        checkout([
+          $class: 'GitSCM',
+          branches: [[name: 'refs/heads/k8s-backend-optimization']],
+          userRemoteConfigs: [[
+            url: 'https://github.com/ines312692/ToDoList.git'
+
+          ]]
+        ])
+      }
+    }
+  }
 
     stage('Workspace info') {
       steps {
