add config jenkinsfile_backend

--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -20,21 +20,19 @@ pipeline {
     ARTIFACTS_PVC_PATH = '/mnt/artifacts'
   }
 
-  stage('Checkout') {
-    steps {
-      container('node') {
-        echo "Je lance le checkout manuellement"
-        checkout([
-          $class: 'GitSCM',
-          branches: [[name: 'refs/heads/k8s-backend-optimization']],
-          userRemoteConfigs: [[url: 'https://github.com/ines312692/ToDoList.git']]
-        ])
+  stages {
+    stage('Checkout') {
+      steps {
+        container('node') {
+          echo "Je lance le checkout manuellement"
+          checkout([
+            $class: 'GitSCM',
+            branches: [[name: 'refs/heads/k8s-backend-optimization']],
+            userRemoteConfigs: [[url: 'https://github.com/ines312692/ToDoList.git']]
+          ])
+        }
       }
     }
-  }
-
-
-
 
     stage('Workspace info') {
       steps {
