--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -8,32 +8,16 @@ pipeline {
     }
   }
 
-  options {
-    skipDefaultCheckout(true)
-  }
-
   environment {
     DOCKERHUB_USERNAME = 'inestmimi123'
     DOCKERHUB_IMAGE = 'todo-backend'
+    IMAGE_TAG = "${env.BUILD_NUMBER}-${env.GIT_COMMIT.take(7)}"
     DOCKER_BUILDKIT = '1'
     WORKSPACE_PVC_PATH = '/mnt/workspace_cache'
     ARTIFACTS_PVC_PATH = '/mnt/artifacts'
   }
 
   stages {
-    stage('Checkout') {
-      steps {
-        container('node') {
-          echo "Je lance le checkout manuellement"
-          checkout([
-            $class: 'GitSCM',
-            branches: [[name: 'refs/heads/k8s-backend-optimization']],
-            userRemoteConfigs: [[url: 'https://github.com/ines312692/ToDoList.git']]
-          ])
-        }
-      }
-    }
-
     stage('Workspace info') {
       steps {
         container('node') {
@@ -48,10 +32,15 @@ pipeline {
           dir('To_Do_List_Backend') {
             sh '''
               echo "=== Installing dependencies using PVC-mounted node_modules ==="
+
+              # Assure le dossier node_modules dans le PVC
               mkdir -p ${WORKSPACE_PVC_PATH}/node_modules
+
+              # Crée lien symbolique local vers node_modules du PVC
               ln -sf ${WORKSPACE_PVC_PATH}/node_modules ./node_modules
 
               if [ -f package.json ]; then
+                # Vérifie si des paquets sont obsolètes
                 outdated=$(npm outdated --json || echo '{}')
                 if [ "$(echo "$outdated" | jq length)" -gt 0 ]; then
                   echo "Outdated dependencies detected, reinstalling..."
@@ -76,7 +65,9 @@ pipeline {
       steps {
         container('docker') {
           withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
-            sh 'echo "$PASSWORD" | docker login -u "$USERNAME" --password-stdin'
+            sh '''
+              echo "$PASSWORD" | docker login -u "$USERNAME" --password-stdin
+            '''
           }
         }
       }
@@ -86,14 +77,14 @@ pipeline {
       steps {
         container('docker') {
           dir('To_Do_List_Backend') {
-            sh """
+            sh '''
               echo "=== Building Docker image with BuildKit ==="
-              DOCKER_BUILDKIT=1 docker build \\
-                --build-arg BUILDKIT_INLINE_CACHE=1 \\
-                --cache-from ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest \\
-                -t ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:${env.IMAGE_TAG} \\
+              DOCKER_BUILDKIT=1 docker build \
+                --build-arg BUILDKIT_INLINE_CACHE=1 \
+                --cache-from ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest \
+                -t ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:${IMAGE_TAG} \
                 -t ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest .
-            """
+            '''
           }
         }
       }
@@ -102,10 +93,10 @@ pipeline {
     stage('Push to Docker Hub') {
       steps {
         container('docker') {
-          sh """
-            docker push ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:${env.IMAGE_TAG}
+          sh '''
+            docker push ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:${IMAGE_TAG}
             docker push ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest
-          """
+          '''
         }
       }
     }
@@ -113,7 +104,7 @@ pipeline {
     stage('Artifacts Persistence') {
       steps {
         container('node') {
-          sh """
+          sh '''
             if [ -d "To_Do_List_Backend/dist" ]; then
               echo "Saving build artifacts to PVC..."
               mkdir -p ${ARTIFACTS_PVC_PATH}/build-${BUILD_NUMBER}
@@ -121,7 +112,7 @@ pipeline {
             else
               echo "No dist directory found, skipping artifact persistence"
             fi
-          """
+          '''
         }
       }
     }
@@ -129,7 +120,9 @@ pipeline {
     stage('Cleanup Docker') {
       steps {
         container('docker') {
-          sh 'docker system prune -f --filter "until=24h" || echo "Docker cleanup failed"'
+          sh '''
+            docker system prune -f --filter "until=24h" || echo "Docker cleanup failed"
+          '''
         }
       }
     }
